# CV-Resume-Builder

./: README.md  cv_template.py  main.py  pdf_generator.py  pyproject.toml  styles.py  templates.py  utils.py
